Bug#38519 - errors in embedded tests 2  issues addressed here:

1) Memory manager structures were not always initialized in MemMgr::allocDebug()
2) There is a crash in exit() on destructor of static SyncObject syncDatabaseList.
SyncObject::name points to invalid memory. No idea how that happens, either
memory corruption or memoryManager destructor has already run. 
Fixed/worked around by  making SyncObject::name const char* and thus avoiding 
any calls to MemMgr. SyncObject::name is or should be a constant string anyway.